--- a/ACO.Rmd
+++ b/ACO.Rmd
@@ -124,12 +124,51 @@ length(unique(tmp$Participant.Legal.Business.Name)) #9716
 
 ```
 ### filter out the un-matched aco participants and match them with individual npi number
+
+### extract only the first four letters of each word.
+
+```{r}
+library(stringr)
+library(plyr)
+new.aco <- anti_join(aco.part,tmp, by = "Participant.Legal.Business.Name")
+test <-str_extract_all(new.aco$new.name3, "\\b(\\w{4})")
+new.aco$short_name <- sapply(test, paste, collapse = "")
+
+test2 <- new.aco %>% 
+	group_by(short_name) %>% 
+	tally()
+
+test3 <- test2 %>% 
+	filter(n==1) %>% 
+	select(short_name)
+
+part.new.aco <- semi_join(new.aco,test3)
+
+test <- str_extract_all(df.nppes$new.name3, "\\b(\\w{4})")
+df.nppes$short_name <- sapply(test, paste, collapse = "")
+
+nppes.aco.short.name <- right_join(df.nppes, part.new.aco, by = "short_name")
+tmp5 <- nppes.aco.short.name %>%  
+	filter(!is.na(provider_organization_name_legal_business_name)) %>% 
+	select(npi_id,Participant.Legal.Business.Name, short_name)
+test4 <- tmp5 %>% 
+	group_by(Participant.Legal.Business.Name) %>% 
+	tally()
+tmp6 <- test4 %>% 
+	filter(n==1) %>% 
+	select(Participant.Legal.Business.Name)
+# keep only the unique matches, so the matched number is 1635.(If used after individual npi matching, the number is 1081)
+nppes.aco.short.name <- semi_join(nppes.aco.short.name, tmp6)
+```
+
+
+###################################################################
+
 #### Remove the suffixes of ACO participant names.
 ```{r}
-tmp <- nppes.aco %>% 
-	filter(is.na(provider_organization_name_legal_business_name)) %>% 
-	select(new.name3.y , Participant.Legal.Business.Name)
-tmp$no_suf <- gsub("\\s(PA)$","", tmp$new.name3.y)
+tmp <- anti_join(new.aco, nppes.aco.short.name, by = "Participant.Legal.Business.Name")
+
+tmp$no_suf <- gsub("\\s(PA)$","", tmp$new.name3)
 tmp$no_suf <- gsub("\\s(MD)$","", tmp$no_suf)
 tmp$no_suf <- gsub("^(DR)\\s","", tmp$no_suf)
 tmp$no_suf_no_space <- gsub("[[:space:]]+","",tmp$no_suf)
@@ -209,11 +248,15 @@ tmp4 <- nppes.aco.ind.no.mid %>%
 test <- full_join(tmp, tmp2)
 test2 <- full_join(test, tmp3)
 test3 <- full_join(test2, tmp4)
-length(unique(test3$Participant.Legal.Business.Name))
+length(unique(test3$Participant.Legal.Business.Name)) #11929
+```
+### Try to use the same method on organizational NPIs. Or try to get the first four letters of any words longer than 3 letters.
+
+```{r}
+tmp5 <- anti_join(part.new.aco, nppes.aco.short.name, by = "Participant.Legal.Business.Name")
 
 
 ```
-
 
 
 ########################################
